# coinloan_test_assignment

./: .gitignore  README.md
coinloan/: Cargo.toml
coinloan/migrations/2022-07-11-175648_create_orders/: up.sql
coinloan/src/: binance_client.rs  db_methods.rs  db_model.rs  get_prices.rs  json_rpc.rs  main.rs  schema.rs  services.rs
