[package]
name = "coinloan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
