[package]
name = "coinloan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version= "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = {version="0.14.0", features = ["rustls-tls"]}
reqwest = {version = "0.11", features = ["json", "blocking"]}
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
dotenv = "0.15.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
diesel = {version = "1.4.4", features = ["postgres", "numeric"]}
bigdecimal = {version = "0.1.2", features = ["serde"]}
